--- a/index.html
+++ b/index.html
@@ -77,11 +77,7 @@
       -->
       
           <section>
-                <!--
-                *
-                * Bloque SECTION
-                *
-                -->
+            <h1 class="section-h1">Hola Mundo</h1>
           </section>
       
           <article>
